# markdown-weaver

./: .gitattributes  .gitignore  Cargo.toml  README.md  shell.nix
.zed/: settings.json
bench/: Cargo.toml
bench/benches/: html_rendering.rs  lib.rs  markdown-it.rs
dos-fuzzer/: Cargo.toml
dos-fuzzer/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: commonmark_js.rs  parse.rs
fuzz/src/: lib.rs
markdown-weaver/: Cargo.toml
markdown-weaver-escape/: Cargo.toml
markdown-weaver-escape/src/: lib.rs
markdown-weaver/examples/: broken-link-callbacks.rs  event-filter.rs  events.rs  footnote-rewrite.rs  normalize-wikilink.rs  parser-map-event-print.rs  parser-map-tag-print.rs  string-to-string.rs
markdown-weaver/src/: firstpass.rs  html.rs  lib.rs  main.rs  parse.rs  scanners.rs
markdown-weaver/tests/: errors.rs  html.rs  lib.rs  serde.rs
markdown-weaver/tests/suite/: blockquotes_tags.rs  definition_lists.rs  footnotes.rs  gfm_strikethrough.rs  gfm_table.rs  gfm_tasklist.rs  heading_attrs.rs  math.rs  metadata_blocks.rs  mod.rs  old_footnotes.rs  regression.rs  smart_punct.rs  spec.rs  strikethrough.rs  super_sub.rs  table.rs  weaver_attrs.rs  wikilinks.rs
