[package]
name = "markdown-weaver-bench"
publish = false
version = "0.0.0"
edition = "2021"

[[bench]]
name = "html_rendering"
harness = false

[[bench]]
name = "lib"
harness = false

[[bench]]
name = "markdown-it"
harness = false

[dependencies]
markdown-weaver = { path = "../markdown-weaver" }

[features]
simd = [ "markdown-weaver/simd" ]

[dev-dependencies]
criterion = "0.5.1"
