[package]
name = "markdown-weaver"
version = "0.13.0"
authors = [
    "Raph Levien <raph.levien@gmail.com>",
    "Marcus Klaas de Vries <mail@marcusklaas.nl>",
]
license = "MIT"
description = "A pull parser for CommonMark"
repository = "https://github.com/rsform/markdown-weaver"
keywords = ["markdown", "commonmark"]
categories = ["text-processing"]
edition = "2021"
rust-version = "1.71.1" # Update README.md, CONTRIBUTING.md, and GitHub action when changing this
readme = "../README.md"
exclude = [
    "/third_party/**/*",
    "/tools/**/*",
    "/specs/**/*",
    "/azure-pipelines.yml",
]

build = "build.rs"

[[bin]]
name = "markdown-weaver"
required-features = ["getopts", "std"]
doc = false

[[example]]
name = "event-filter"
required-features = ["html"]
doc-scrape-examples = true

[[example]]
name = "footnote-rewrite"
required-features = ["html"]
doc-scrape-examples = true

[[example]]
name = "parser-map-event-print"
required-features = ["html"]
doc-scrape-examples = true

[[example]]
name = "parser-map-tag-print"
required-features = ["html"]
doc-scrape-examples = true

[[example]]
name = "string-to-string"
required-features = ["html"]
doc-scrape-examples = true

[[example]]
name = "broken-link-callbacks"
required-features = ["html"]
doc-scrape-examples = true

[[example]]
name = "normalize-wikilink"
required-features = ["html"]
doc-scrape-examples = true

[dependencies]
bitflags = "2"
unicase = "2.6"
memchr = { version = "2.5", default-features = false }
getopts = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
markdown-weaver-escape = { path = "../markdown-weaver-escape", version = "0.11", optional = true }
hashbrown = { version = "0.15.2", optional = true }

[dev-dependencies]
regex = "1.6"
serde_json = "1.0.61"
bincode = "1.3.1"

[features]
default = ["std", "getopts", "html", "serde"]
std = ["markdown-weaver-escape?/std", "memchr/std"]
gen-tests = []
simd = ["markdown-weaver-escape?/simd"]
html = ["markdown-weaver-escape"]
hashbrown = ["dep:hashbrown"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rustbuild)'] }
